# autofiller-community

./: .gitignore  README.md  SUPPORT.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  domain_pack.md  feature_request.md
.github/workflows/: ci.yml  eval-nightly.yml  eval-smoke.yml  release-sdk.yml
capture-logic/: README.md  logic.schema.json
capture-logic/transforms/: currency.yaml  dates.yaml
capture-logic/validations/: common.yaml
docs/: README.md  getting-started.md
domain-packs/: README.md  pack.schema.json
domain-packs/starter/: README.md  capture-rules.yaml  pack.yaml  questions.yaml  schema.json
domain-packs/starter/eval/: cases.jsonl  metrics.yaml
domain-packs/starter/fixtures/: README.md
evals/runner/: README.md  __init__.py  fill_accuracy.py  full_eval.py  metrics.py  model_accuracy.py  requirements.txt  smoke_eval.py  validate_packs.py
examples/: README.md
examples/curl/: 01-extract-sync.sh  02-extract-async.sh  03-list-domain-packs.sh  04-health-check.sh  README.md
examples/python/: 01_basic_extraction.py  02_async_extraction.py  03_batch_processing.py  README.md
examples/typescript/: README.md  package.json
examples/typescript/src/: 01-basic-extraction.ts  02-async-extraction.ts  03-batch-processing.ts
models/: README.md  requirements.txt
models/document-understanding/config/: model_config.yaml  training_config.yaml
models/document-understanding/training/: dataset.py  train.py
models/persona_training/: __init__.py  agent.py  train.py
openapi/: README.md  openapi.json  openapi.yaml
personas/: README.md  persona.schema.json
personas/hr-professional/: document-types.yaml  persona.yaml
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/autofiller/: __init__.py  client.py  errors.py  types.py
sdks/typescript/: README.md  package.json  tsconfig.json
(+11 files in other folders)
