[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autofiller-sdk"
version = "0.1.0"
description = "Official Python SDK for Autofiller Community Edition"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Autofiller Community", email = "community@autofiller.dev" }
]
keywords = [
    "autofiller",
    "document-extraction",
    "ocr",
    "pdf",
    "data-extraction",
    "invoice",
    "forms"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0"
]

[project.urls]
Homepage = "https://github.com/your-org/autofiller-community"
Documentation = "https://github.com/your-org/autofiller-community#readme"
Repository = "https://github.com/your-org/autofiller-community.git"
Issues = "https://github.com/your-org/autofiller-community/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autofiller"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
